--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,18 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+main{
+  position: relative;
+  width: 450px;
+  height: auto;
+  display: block;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+}
+
