--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,10 +27,10 @@ main{
   width: 450px;
   height: auto;
   display: block;
-  padding-top: 50px;
+  padding: 50px 0;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  padding-bottom: 100%;
+  /*padding-bottom: 100%;*/
 }
 
