--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,10 +1,12 @@
-#tweet-id{
+#tweets-container{
   margin: 2em;
 }
 
 .tweet-article{
   border: solid 1px;
   border-radius: 8px;
+  margin: 1em 0;
+  opacity: 0.8;
   /*padding: 2em;*/
 }
 
@@ -19,10 +21,11 @@
 }
 
 .tweet-article img{
-  width: 80px;
-  height: 80px;
-  margin-left: 0.5em;
+  width: 60px;
+  height: 60px;
+  margin: 0.5em;
   float: left;
+  border-radius: 8px;
 }
 
 .tweet-article label{
@@ -51,7 +54,7 @@
 }
 
 .tweet-article:hover{
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .tweet-article footer div.icons{
