--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -6,7 +6,7 @@
   border: solid 1px;
   border-radius: 8px;
   margin: 1em 0;
-  opacity: 0.8;
+  opacity: 0.6;
   /*padding: 2em;*/
 }
 
@@ -39,6 +39,8 @@
 
 .tweet-article p{
   opacity: 1;
+  width: 100%;
+  word-break: break-word;
 }
 
 .tweet-article .tag{
@@ -58,6 +60,11 @@
 }
 
 .tweet-article:hover{
+  opacity: 1;
+  border: solid 3px;
+}
+
+.tweet-article:hover header{
   opacity: 1;
 }
 
