--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   background-color: #eee;
   padding: 0 2em;
-  margin: 0 2em auto 2em;
+  margin: 3em 2em auto 2em;
   padding-bottom: 0.5em;
   display: none;
 }
