--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -27,25 +27,31 @@
   float: right;
 }
 
-.new-tweet .message{
+.message{
   display: none;
   margin: 0.5em;
 }
 
-.new-tweet .message.error{
+.message.error{
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
+  border-radius: 8px;
+  padding: 0.5em;
 }
 
-.new-tweet .message.warning{
+.message.warning{
   color: #8a6d3b;
   background-color: #fcf8e3;
   border-color: #faebcc;
+  border-radius: 8px;
+  padding: 0.5em;
 }
 
-.new-tweet .message.success{
+.message.success{
   color: #3c763d;
   background-color: #dff0d8;
   border-color: #d6e9c6;
+  border-radius: 8px;
+  padding: 0.5em;
 }
