--- a/public/styles/old/layout.css
+++ b/public/styles/old/layout.css
@@ -18,22 +18,18 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+
   font-family: 'Roboto Condensed', sans-serif;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
 }
 
 main{
-  /*position: relative;*/
-  width: 30rem;
+  position: relative;
+  width: 450px;
   height: auto;
   display: block;
-  /*padding: 3rem 0;*/
-  /*margin-left: auto;
-  margin-right: auto;*/
+  padding: 50px 0;
+  margin-left: auto;
+  margin-right: auto;
   background-color: white;
 }
 
