--- a/public/styles/old/new-tweet.css
+++ b/public/styles/old/new-tweet.css
@@ -1,5 +1,5 @@
 .new-tweet {
-  border: solid 0.1rem;
+  border: solid 1px;
   border-radius: 10px;
   background-color: #eee;
   padding: 0 2em;
@@ -18,14 +18,14 @@
 
 .container textarea {
   width: 100%;
-  height: 5rem;
+  height: 80px;
   padding: 4px;
   resize: none;
 }
 
-/*.counter {
+.counter {
   float: right;
-}*/
+}
 
 .message {
   display: none;
@@ -35,7 +35,7 @@
 .message.error,
 .message.warning,
 .message.success {
-  border-radius: 0.5rem;
+  border-radius: 8px;
   padding: 0.5em;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .counter.counter-default{
-  color: #244751;
+  color: '#244751';
 }
 
 .counter.counter-error{
