--- a/public/styles/old/tweets.css
+++ b/public/styles/old/tweets.css
@@ -3,19 +3,16 @@
 }
 
 .tweet-article {
-  border: solid 0.1rem;
-  border-radius: 0.5rem;
+  border: solid 1px;
+  border-radius: 8px;
   margin: 1em 0;
 }
 
 .tweet-article header {
-  height: 5rem;
+  height: 80px;
   background-color: #eee;
-  border-radius: 0.5rem;
+  border-radius: 8px;
   opacity: 0.6;
-  display: flex;
-  /*justify-content: space-between;*/
-  align-items: center;
 }
 
 .tweet-article strong {
@@ -23,16 +20,16 @@
 }
 
 .tweet-article img {
-  width: 4rem;
-  height: 4rem;
+  width: 60px;
+  height: 60px;
   margin: 0.5em;
-  /*float: left;*/
-  border-radius: 0.5rem;
+  float: left;
+  border-radius: 8px;
 }
 
-/*.tweet-article label {
+.tweet-article label {
   line-height: 2.5;
-}*/
+}
 
 .tweet-article main {
   width: auto;
@@ -45,21 +42,18 @@
 }
 
 .tweet-article .tag {
-  /*float: right;*/
+  float: right;
   margin-right: 0.5em;
 }
 
 .tweet-article footer {
-  border-top: solid 0.1rem;
+  border-top: solid 1px;
   padding: 0.5em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .tweet-article footer i {
-  /*float: right;*/
-  /*line-height: 2.5;*/
+  float: right;
+  line-height: 2.5;
   margin: 0 0.5em;
 }
 
@@ -73,7 +67,7 @@
 }
 
 .tweet-article footer div.icons {
-  /*float: right;*/
+  float: right;
   display: none;
 }
 
