--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,11 +23,14 @@ body {
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  /*flex-flow: column wrap;*/
+  /*align-items: center;*/
 }
 
 main{
   /*position: relative;*/
+  /*height: 5rem;
+  width: 30rem;*/
   width: 30rem;
   height: auto;
   display: block;
@@ -35,5 +38,7 @@ main{
   /*margin-left: auto;
   margin-right: auto;*/
   background-color: white;
+  /*flex-flow: column wrap;
+  align-content: center;*/
 }
 
