--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -3,13 +3,15 @@
 }
 
 .tweet-article {
-  border: solid 0.1rem;
+  border: solid 0.15rem;
   border-radius: 0.5rem;
   margin: 1rem 0;
 }
 
 .tweet-article header {
-  width: 5rem;
+  width: auto;
+  height: 5rem;
+  /*width: 5rem;*/
   /*height: 5rem;*/
   background-color: #eee;
   border-radius: 0.5rem;
@@ -49,8 +51,8 @@
 }
 
 .tweet-article .tag {
-  /*float: right;*/
   margin-right: 0.5rem;
+  text-align: right;
 }
 
 .tweet-article footer {
