--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,6 +25,15 @@ nav {
   width: 75%;
 }
 
+.btn-login-register{
+  display: block;
+  margin: 0 0.2rem;
+}
+
+.btn-loggedin{
+  display: none;
+}
+
 .btn-nav {
   margin: 0.3rem 0;
   border: solid 0.1rem;
@@ -64,4 +73,8 @@ nav {
   margin: 0.5rem;
 }
 
+.popup-display{
+  display: block;
+  z-index: 1;
+}
 /*# sourcremappingURL=nav.css.map */
