--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -45,7 +45,11 @@ nav {
   align-items: center;
 }
 
-.btn-nav:hover {
+.btn-nav,
+.btn-login-register,
+.btn-loggedin,
+.btn-cancel,
+button:hover {
   cursor: pointer;
 }
 
