--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -47,10 +47,9 @@ main{
 .popupModal{
   top: 0;
   left: 0;
-  position:
-  fixed;
-  width: 100%;
-  height: 120%;
+  position: fixed;
+  width: 100vw;
+  height: 120vh;
   background-color: rgba(0,0,0,0.7);
   display: none;
 }
@@ -76,4 +75,8 @@ main{
 .popup-header{
   display: flex;
   align-content: space-between;
+}
+
+.popup-header h3{
+  width: 99%
 }
